@@ -6606,9 +6606,6 @@
         </parameters>
       </method>
     </object>
-    <struct name="CanvasHacktextPriv" cname="GnomeCanvasHacktextPriv" opaque="true" />
-  </namespace>
-  <namespace name="Gnome" library="gnomeprintui-2-2">
     <object name="GPAOptionMenu" cname="GPAOptionMenu" parent="GPAWidget">
       <field cname="menu" type="GtkWidget*" />
       <field cname="node" type="GPANode*" />
@@ -6703,5 +6700,6 @@
         </parameters>
       </constructor>
     </object>
+    <struct name="CanvasHacktextPriv" cname="GnomeCanvasHacktextPriv" opaque="true" />
   </namespace>
 </api>
