@@ -1,3 +1,10 @@
+2003-12-12  Mike Kestner  <mkestner@ximian.com>
+
+	* gnome/gnome-api.xml : regen'd
+	* parser/gapi2xml.pl : handle typedef enum _foo foo;
+	* parser/gapi-parser : support <exclude> elements in addition to <dir>
+	and <file> to specify the sources to be parsed.
+
 2003-12-12  Radek Doulik  <rodo@ximian.com>
 
 	* gtk/Gtk.metadata: hide TextTag.Weight property and implement it
